# llama.onnx

./: .gitignore  board_infer_orig.py  cgz_notes.md  create_calib_dir.sh  create_calib_dir_multi.sh  create_yaml.sh  demo_rwkv.py  dump_multiple_inputs.sh  makertbin.sh  model_to_oe.sh  model_to_oe2.sh  requirements.txt
bpu_convert_yaml/: create_yaml.sh  rwkv_head_config.yaml  rwkv_mixing_0_config.yaml  rwkv_mixing_10_config.yaml  rwkv_mixing_11_config.yaml  rwkv_mixing_12_config.yaml  rwkv_mixing_13_config.yaml  rwkv_mixing_14_config.yaml  rwkv_mixing_15_config.yaml  rwkv_mixing_16_config.yaml  rwkv_mixing_17_config.yaml  rwkv_mixing_18_config.yaml  rwkv_mixing_19_config.yaml  rwkv_mixing_1_config.yaml  rwkv_mixing_20_config.yaml  rwkv_mixing_21_config.yaml  rwkv_mixing_22_config.yaml  rwkv_mixing_23_config.yaml  rwkv_mixing_2_config.yaml  rwkv_mixing_3_config.yaml  rwkv_mixing_4_config.yaml  rwkv_mixing_5_config.yaml  rwkv_mixing_6_config.yaml  rwkv_mixing_7_config.yaml  rwkv_mixing_8_config.yaml  rwkv_mixing_9_config.yaml
llama/: __init__.py  memory_pool.py
onnx_test/: onnx_infer.py
rwkv_bpu_board_infer/: CMakeLists.txt  main.cpp  main_bak.cpp  main_readmultiinputs.cpp  test_bin.py  wiifi连接.md  精度验证.md
rwkv_bpu_board_infer/cpu_sample/: cgz_rwkv_change_simplenamespace.py
rwkv_bpu_board_infer/pybind_infer/: CMakeLists.txt  demo_rwkv.py  logits_process.py  main.cpp  main_bak1.cpp  memory_pool.py  test.py  utils.py
rwkv_bpu_board_infer/pybind_test/: CMakeLists.txt  main.cpp  notes.md  test.py
test/: hbonnxrt_test.py  hbonnxrt_test2.py
tools/: model_to_oe.sh  (+9 more)
(+5 files in other folders)
